# taxi_demand_predictor

./: README.md  pyproject.toml
.github/workflows/: feature_pipeline.yaml  feature_pipeline_with_cache.yaml  inference_pipeline.yaml  main.yml
.github/workloads/: feature_pipeline.yaml
notebooks/: 01_load_and_validate_raw_data.ipynb  02_transform_raw_2_ts_data.ipynb  03_transform_data_2_dataset.ipynb  04_raw_data_2_dataset.ipynb  05_visualize_training_data.ipynb  06_baseline_model.ipynb  07_xgboost_model.ipynb  08_lightgbm_model.ipynb  09_lightgbm_model_w_feat_eng.ipynb  10_lightgbm_model_w_hyperparam_tuning.ipynb  11_backfill_feat_store.ipynb  12_feature_pipeline.ipynb  13_model_training_pipeline.ipynb  14_inference_pipeline.ipynb
src/: config.py  data.py  data_split.py  feature_store_api.py  frontend.py  inference.py  model.py  paths.py  plot.py
