[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["kshitijk <kshitij.kumbar@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
requests = "^2.30.0"
pandas = "^2.0.1"
pyarrow = "^12.0.0"
tqdm = "^4.65.0"
plotly = "^5.14.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
