[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["kshitijk <kshitij.kumbar@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.13,<3.10"
hopsworks = "^3.0.5"
requests = "^2.30.0"
pyarrow = "^12.0.0"
pandas = "^2.0.1"
python-dotenv = "^1.0.0"
xgboost = "^1.7.5"
lightgbm = "^3.3.5"
optuna = "^3.1.1"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
